# Group21-Discord-Bot

./: .gitignore  README.md  README.txt  _setup.py  backlog.txt  pyproject.toml
DiscordBot/: .env  bot.py  tempCodeRunnerFile.py  test.py
TrentUAC/: UAC_CS.txt
VirtualPython/: pyvenv.cfg
VirtualPython/Scripts/: activate  activate.bat
WebScraper/: PDFParse.py  PdfScraper.py  TrentuScraper.py  WebsiteScraper.py  test.py
WebScraper/Depreciated/: PdfFormatter.py
WebScraper/TrentUAC/: UAC_CS.txt
WebScraper/WebsiteParse_Html/: Html_text.txt
bot-env/: pyvenv.cfg
bot-env/Scripts/: activate  activate.bat
data/: Html_text.txt  ac_link.json  cs_specialties.txt  requirements.txt  specialties.json  test.txt
deprecated/: deleted-code.py  pdfscraper.py  websitescraper.py
graveyard/: deleted-code.py
src/TrentUPackage/: .env  PdfScraper.py  bot.py  test.py
src/TrentUPackage.egg-info/: PKG-INFO
src/data/: Formatted_UAC.txt
src/trentubuddy/: __main__.py  bot.py  websitescraper.py
src/trentubuddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/trentubuddy/cogs/commands/: help.py  specialties.py  web_scraper_commands.py
src/trentubuddy/helper/: test.py  websitescraper.py
src/trentubuddy/scripts/: ac_link_scraiper.py  cross_platform.py  cs_specialty_scraper.py  helpers.py  web_scraper.py
src/trentubuddy/scripts/commands/: booking.py  help.py  specialties.py
