[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"




[project]
name = "trentubuddy"
version = "0.0.7"
dependencies = [
    "discord >= 2.0.0",
    "python-dotenv >= 0.21.0",
    "selenium >= 4.5.0",
    "bs4 >= 0.0.1",
    "webdriver_manager >=3.8.4",
    "PyPDF2 >= 2.11.1",
    "lxml >= 4.9.1"
]

requires-python = ">=3.10.6"